fix: fix cannot be seen  overflowing product card border when hovered

--- a/root/frontend/style/component.css
+++ b/root/frontend/style/component.css
@@ -235,7 +235,6 @@
 /* ----------------- PRODUCT CARD & PRODUCT LIST ----------------- */
 
 .product-list {
-	overflow: hidden;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	justify-content: stretch;
